--- a/_variables.scss
+++ b/_variables.scss
@@ -8,7 +8,7 @@ $l-3col : $l-col * 3;
 $l-4col : $l-col * 4;
 
 $typescale    : 1.25;
-$baselineratio: 16 / 9;
+$baselineratio: 1.778; // 16 / 9
 
 $baseFontValue      : 24;
 $baseFontValueLaptop: 32;
