--- a/global.scss
+++ b/global.scss
@@ -89,59 +89,59 @@ body {
 
 .l {
   $displayProperty: (
-    'd-n': 'none', 
-    'd-b': 'block', 
-    'd-f': 'flex', 
-    'd-i':'inline', 
-    'd-if':'inline-flex', 
-    'd-ib':'inline-block'
+    'd-n': none, 
+    'd-b': block, 
+    'd-f': flex, 
+    'd-i': inline, 
+    'd-if': inline-flex, 
+    'd-ib': inline-block
   );
   // display
   @include createSubClass($displayProperty, 'display');
 
   $flexDirectionProperty: (
-    'fd-col': 'column',
-    'fd-col-reverse': 'column-reverse',
-    'fd-row': 'row',
-    'fd-row-reverse': 'row-reverse'
+    'fd-col': column,
+    'fd-col-reverse': column-reverse,
+    'fd-row': row,
+    'fd-row-reverse': row-reverse
   );
   // flex
   @include createSubClass($flexDirectionProperty, 'flex-direction');
 
   $flexWrapProperty: (
-    'fw-w'  : 'wrap',
-    'fw-wr' : 'wrap-reverse',
-    'fw-nw' : 'no-wrap'
+    'fw-w'  : wrap,
+    'fw-wr' : wrap-reverse,
+    'fw-nw' : no-wrap
   );
   @include createSubClass($flexWrapProperty, 'flex-wrap');
 
   $flexAlignProperty: (
-    'ai-cen': 'center',
-    'ai-fs' : 'flex-start',
-    'ai-fe' : 'flex-end',
-    'ai-str': 'flex-stretch'
+    'ai-cen': center,
+    'ai-fs' : flex-start,
+    'ai-fe' : flex-end,
+    'ai-str': flex-stretch
   );
   // aligns
-  @include createSubClass($flexAlignProperty, 'flex-wrap');
+  @include createSubClass($flexAlignProperty, 'align-items');
 
   $flexSelfAlignProperty: (
-    'as-cen': 'center',
-    'as-fs' : 'flex-start',
-    'as-fe' : 'flex-end',
-    'as-str': 'flex-stretch'
+    'as-cen': center,
+    'as-fs' : flex-start,
+    'as-fe' : flex-end,
+    'as-str': flex-stretch
   );
   // align-self
-  @include createSubClass($flexSelfAlignProperty, 'flex-wrap');
+  @include createSubClass($flexSelfAlignProperty, 'align-self');
 
   $justifyContentProperty: (
-    'jc-fs' : 'flex-start',
-    'jc-fe' : 'flex-end',
-    'jc-cen': 'center',
-    'jc-sb' : 'space-between',
-    'jc-sa' : 'space-around'
+    'jc-fs' : flex-start,
+    'jc-fe' : flex-end,
+    'jc-cen': center,
+    'jc-sb' : space-between,
+    'jc-sa' : space-around
   );
   // justify-content
-  @include createSubClass($justifyContentProperty, 'flex-wrap');
+  @include createSubClass($justifyContentProperty, 'justify-content');
 
   // position
   &-p-rel {
@@ -175,17 +175,17 @@ body {
     '6': $gridSpace * 6,
     '7': $gridSpace * 7
   );
-  @include sizingGenerator($gridSpace, 'margin', 'ma');
-  @include sizingGenerator($gridSpace, 'margin-left', 'ml');
-  @include sizingGenerator($gridSpace, 'margin-right', 'mr');
-  @include sizingGenerator($gridSpace, 'margin-top', 'mt');
-  @include sizingGenerator($gridSpace, 'margin-bottom', 'mb');
+  @include sizingGenerator($gridSpaces, 'margin', 'ma');
+  @include sizingGenerator($gridSpaces, 'margin-left', 'ml');
+  @include sizingGenerator($gridSpaces, 'margin-right', 'mr');
+  @include sizingGenerator($gridSpaces, 'margin-top', 'mt');
+  @include sizingGenerator($gridSpaces, 'margin-bottom', 'mb');
 
-  @include sizingGenerator($gridSpace, 'padding', 'pa');
-  @include sizingGenerator($gridSpace, 'padding-left', 'pl');
-  @include sizingGenerator($gridSpace, 'padding-right', 'pr');
-  @include sizingGenerator($gridSpace, 'padding-top', 'pt');
-  @include sizingGenerator($gridSpace, 'padding-bottom', 'pb');
+  @include sizingGenerator($gridSpaces, 'padding', 'pa');
+  @include sizingGenerator($gridSpaces, 'padding-left', 'pl');
+  @include sizingGenerator($gridSpaces, 'padding-right', 'pr');
+  @include sizingGenerator($gridSpaces, 'padding-top', 'pt');
+  @include sizingGenerator($gridSpaces, 'padding-bottom', 'pb');
 
   &-mh-auto {
     margin-left: auto;
@@ -208,6 +208,11 @@ body {
   // overflow
   &-o-h {
     overflow: hidden;
+  }
+
+  // list style type
+  &-lst-n {
+    list-style-type: none;
   }
 }
 
