--- a/global.scss
+++ b/global.scss
@@ -44,7 +44,7 @@ body {
   }
 
   h4,.h4 {
-    font-size: #{(1 * ($typescale * 4))}rem;
+    font-size: #{(1 * ($typescale))}rem;
     line-height: #{$baseline * 2}rem;
     margin: #{$baseline}rem 0;
   }
