--- a/_variables.scss
+++ b/_variables.scss
@@ -6,6 +6,7 @@ $l-1col : $l-col * 1;
 $l-2col : $l-col * 2;
 $l-3col : $l-col * 3;
 $l-4col : $l-col * 4;
+$l-5col : $l-col * 5;
 
 $typescale    : 1.25;
 $baselineratio: 1.778; // 16 / 9
